syntax = "proto3";

package fairyring.Conditionalenc;

import "gogoproto/gogo.proto";
import "fairyring/conditionalenc/params.proto";
import "fairyring/conditionalenc/encrypted_tx.proto";
import "fairyring/conditionalenc/Conditionalenc_nonce.proto";
import "fairyring/conditionalenc/aggregated_key_share.proto";
import "fairyring/conditionalenc/pub_key.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "fairyring/x/conditionalenc/types";

// GenesisState defines the Conditionalenc module's genesis state.
message GenesisState {
  Params                 params                     = 1 [(gogoproto.nullable) = false];
  string                 port_id                    = 2;
  repeated EncryptedTxArray       encryptedTxArray           = 3 [(gogoproto.nullable) = false];
  repeated ConditionalencNonce               ConditionalencNonceList         = 4 [(gogoproto.nullable) = false];

  // this line is used by starport scaffolding # genesis/proto/state
  repeated AggregatedKeyShare     aggregatedKeyShareList     = 6 [(gogoproto.nullable) = false];
  ActivePubKey                    activePubKey               = 7 [(gogoproto.nullable) = false];
  QueuedPubKey                    queuedPubKey               = 8 [(gogoproto.nullable) = false];
}
