syntax = "proto3";
package fairyring.Conditionalenc;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "fairyring/x/conditionalenc/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  repeated TrustedCounterParty trusted_counter_parties = 1;
  repeated string trusted_addresses = 2;
  string channel_id = 3;
  cosmos.base.v1beta1.Coin minGasPrice = 4;
}

message TrustedCounterParty {
  string client_id = 1;
  string connection_id = 2;
  string channel_id = 3;
}