syntax = "proto3";

package fairyring.pep;

import "fairyring/pep/aggregated_key_share.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Fairblock/fairyring/x/pep/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc SubmitEncryptedTx (MsgSubmitEncryptedTx) returns (MsgSubmitEncryptedTxResponse);
  rpc SubmitGeneralEncryptedTx (MsgSubmitGeneralEncryptedTx) returns (MsgSubmitEncryptedTxResponse);
  
  // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateAggregatedKeyShare (MsgCreateAggregatedKeyShare) returns (MsgCreateAggregatedKeyShareResponse);
  rpc RequestGeneralKeyshare   (MsgRequestGeneralKeyshare  ) returns (MsgRequestGeneralKeyshareResponse  );
  rpc GetGeneralKeyshare       (MsgGetGeneralKeyshare      ) returns (MsgGetGeneralKeyshareResponse      );
}

message MsgSubmitEncryptedTx {
  option (cosmos.msg.v1.signer) = "creator";
  string creator           = 1;
  string data              = 2;
  uint64 targetBlockHeight = 3;
}

message MsgSubmitGeneralEncryptedTx {
  option (cosmos.msg.v1.signer) = "creator";
  string creator           = 1;
  string data              = 2;
  string req_id            = 3;
}

message MsgSubmitEncryptedTxResponse {}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateAggregatedKeyShare {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 height  = 2;
  string data    = 3;
}

message MsgCreateAggregatedKeyShareResponse {}

message MsgRequestGeneralKeyshare {
  option (cosmos.msg.v1.signer) = "creator";
  string creator   = 1;
  google.protobuf.Duration estimated_delay = 2 [(gogoproto.stdduration) = true];
}

message MsgRequestGeneralKeyshareResponse {
  string req_id   = 1;
}

message MsgGetGeneralKeyshare {
  option (cosmos.msg.v1.signer) = "creator";
  string creator  = 1;
  string req_id   = 2;
}

message MsgGetGeneralKeyshareResponse {}
